--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Enhuan Dong
-logo: /assets/img/photo.jpg
+logo: /assets/img/photo.png
 description: Assistant Research Professor<br/>Institute for Network Sciences and Cyberspace<br/>Tsinghua University<br/>Beijing, China<br/>100084
 show_downloads: false
 google_analytics:
