update personal information

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Enhuan Dong
+title: ZebornDuan
 logo: /assets/img/photo.png
-description: Assistant Research Professor<br/>Institute for Network Sciences and Cyberspace<br/>Tsinghua University<br/>Beijing, China<br/>100084
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
