update simple description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ZebornDuan
 logo: /assets/img/photo.png
-description: 
+description: Employee in Internet Industry <br/> Beijing, China
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
