--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 段晨鑫 Chenxin Duan
-logo: /assets/img/photo.png
+logo: /assets/img/photo.jpg
 description: e-mail: rebornduan@qq.com <br/> Beijing, China
 show_downloads: false
 google_analytics:
