--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 段晨鑫 Chenxin Duan
 logo: /assets/img/photo.jpg
-description: e-mail: rebornduan@qq.com <br/> Beijing, China
+description: e-mail rebornduan@qq.com <br/> Beijing, China
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
