compress the title to one-line

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 段晨鑫 Chenxin Duan
+title: Chenxin Duan
 logo: /assets/img/photo.jpg
 description: e-mail rebornduan@qq.com <br/> Beijing, China
 show_downloads: false
