split title to 2 lines

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Chenxin Duan
+title: 段晨鑫 <br/> Chenxin Duan
 logo: /assets/img/photo.jpg
 description: e-mail rebornduan@qq.com <br/> Beijing, China
 show_downloads: false
